# mp4forge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: decrypt_file.rs  dump_selected_paths.rs  dump_structured_fields.rs  edit_emsg.rs  extract_mdhd_bytes.rs  extract_track_ids.rs  extract_track_ids_typed.rs  extract_track_ids_typed_bytes.rs  extract_track_ids_typed_parsed_path.rs  probe_async.rs  probe_codec_details.rs  probe_extended_media_characteristics.rs  probe_lightweight.rs  probe_media_characteristics.rs  probe_track_count.rs  probe_track_count_bytes.rs  pssh_report.rs  pssh_report_filtered.rs  read_structure.rs  refresh_top_level_sidx.rs  register_custom_box.rs  resolve_sample_encryption.rs  rewrite_emsg.rs  rewrite_emsg_bytes.rs  validate_divide_layout.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dump_reports.rs  extract_paths.rs  parse_box_headers.rs  probe_reports.rs  read_box_structure.rs  roundtrip_codec_boxes.rs  support.rs  typed_rewrites.rs  writer_backfill.rs
src/: async_io.rs  bitio.rs  codec.rs  decrypt.rs  encryption.rs  extract.rs  fourcc.rs  header.rs  lib.rs  probe.rs  rewrite.rs  sidx.rs  stringify.rs  walk.rs  writer.rs
src/boxes/: av1.rs  avs3.rs  etsi_ts_102_366.rs  etsi_ts_103_190.rs  flac.rs  isma_cryp.rs  iso14496_12.rs  iso14496_14.rs  iso14496_15.rs  iso14496_30.rs  iso23001_5.rs  iso23001_7.rs  marlin.rs  metadata.rs  mod.rs  mpeg_h.rs  oma_dcf.rs  opus.rs  threegpp.rs  vp.rs
src/cli/: decrypt.rs  divide.rs  dump.rs  edit.rs  extract.rs  mod.rs  probe.rs  pssh.rs  util.rs
tests/: async_feature_gate.rs  bitio.rs  box_catalog_3gpp.rs  box_catalog_av1.rs  box_catalog_avs3.rs  box_catalog_etsi_ts_102_366.rs  box_catalog_etsi_ts_103_190.rs  box_catalog_flac.rs  box_catalog_isma_cryp.rs  box_catalog_iso14496_12.rs  box_catalog_iso14496_14.rs  box_catalog_iso14496_15.rs  box_catalog_iso14496_30.rs  box_catalog_iso23001_5.rs  box_catalog_iso23001_7.rs  box_catalog_marlin.rs  box_catalog_metadata.rs  box_catalog_mpeg_h.rs  box_catalog_oma_dcf.rs  box_catalog_opus.rs  box_catalog_vp.rs  boxpath.rs  cli_decrypt.rs  cli_dispatch.rs  cli_divide.rs  cli_dump.rs  cli_edit.rs  cli_extract.rs  cli_probe.rs  cli_psshdump.rs  cli_util.rs  codec_fields.rs  codec_roundtrip.rs  decrypt.rs  decrypt_api.rs  decrypt_async.rs  decrypt_feature_gate.rs  decrypt_rewrite.rs  default_feature_gate.rs  encryption.rs  (+18 more)
tests/fixtures/: oma_dcf_cbc_grpi_decrypted.odf  oma_dcf_cbc_grpi_encrypted.odf  oma_dcf_ctr_grpi_decrypted.odf  oma_dcf_ctr_grpi_encrypted.odf  piff_cbc_media_encrypted.m4s  piff_ctr_media_encrypted.m4s
tests/fixtures/cbc1-single/: audio_1.clear.m4s  video_1.clear.m4s
tests/fixtures/cbcs-multi/: video_1.clear.m4s
tests/fixtures/cbcs-single/: audio_1.clear.m4s
tests/fixtures/cenc-multi/: audio_1.clear.m4s  video_1.clear.m4s
tests/fixtures/cens-multi/: audio_1.clear.m4s
tests/fixtures/cens-single/: audio_1.clear.m4s
tests/golden/cli_dump/: sample-full-mvhd-loci.txt  sample-hex.txt  sample-offset.txt  sample.json  sample.txt  sample.yaml
tests/golden/cli_probe/: sample.json  sample.yaml  sample_light.json  sample_light.yaml
tests/golden/cli_psshdump/: filtered_kid.yaml  (+4 more)
tests/support/: mod.rs
(+3 files in other folders)
