[package]
name = "mp4forge"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
authors = ["bakgio"]
license = "MIT OR Apache-2.0"
description = "Rust library and CLI for inspecting, probing, extracting, and rewriting MP4 box structures"
repository = "https://github.com/bakgio/mp4forge"
readme = "README.md"
keywords = ["mp4", "isobmff", "parser", "video", "cli"]
categories = ["command-line-utilities", "multimedia::video"]
exclude = [".github/**", "fuzz/**", "tests/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = ["dep:tokio"]
decrypt = ["dep:aes"]
serde = ["dep:serde"]

[dependencies]
aes = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
terminal_size = "0.4"
tokio = { version = "1.52.1", features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
aes = "0.8"
serde_json = "1"
